# com-chibifire-fbx-plugin

./: .bazelrc  .gitignore  .gitmodules  AUTHORS-FBX.md  AUTHORS.md  BUILD  CMakeLists.txt  FBX.LICENSE  LICENSE  README.md  ResourceImporterFBX.files  ResourceImporterFBX.includes  SConstruct  build-plugin.bat  build.bat  build_dependencies.bat  build_dependencies.sh  copy.bat  fedora-mingw64.cmake  fedora-osxcross-10.7.cmake
.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.stex
lib/: ResourceImporterFBX.exp  ResourceImporterFBX.lib  godot_cpp_bindings.exp  godot_cpp_bindings.lib  godot_cpp_core.exp  godot_cpp_core.lib
project/: ResourceImporterFBX.sln  ResourceImporterFBX.vcxproj  SimpleDemo.vcxproj  SimpleDemo.vcxproj.filters
sample/: ResourceImporterFBX.gdn  cube.fbx  cube.fbx.import  export_presets.cfg  godot_cpp_bindings.exp  godot_cpp_bindings.lib  godot_cpp_core.exp  godot_cpp_core.lib  main.gd  main.tscn  project.godot
sample/addons/ComChibifireFBXImporter/: ComChibifireFbxImporter.gd  ComChibifireFbxImporter.gdnlib  ComChibifireFbxImporter.gdns  plugin.cfg
sample/addons/ComChibifireFBXImporter/license/: AUTHORS.md
sample/addons/ComChibifireFBXImporter/src/: ComChibifireFbxImporter.cpp  ComChibifireFbxImporter.h
sample/addons/ResourceImporterFBX/: ResourceImporterFBX.gd  ResourceImporterFBX.gdn  ResourceImporterFBX.gdns  ResourceImporterFBXPlugin.gd  plugin.cfg
sample/addons/ResourceImporterFBX/lib/: ResourceImporterFBX.exp  ResourceImporterFBX.iobj  ResourceImporterFBX.ipdb  ResourceImporterFBX.lib
sample/addons/ResourceImporterFBX/src/: ResourceImporterFBX.cpp  ResourceImporterFBX.h  SConstruct  ofbx.cpp  ofbx.h
sample/addons/SimpleClass/: ResourceImporterFBX.gd  SimpleClass.gdnlib  SimpleClass.gdns
sample/addons/SimpleClass/src/: SimpleClass.cpp  SimpleClass.h
sample/addons/com_chibifire_fbx_importer/: com_chibifire_fbx_importer.gd  com_chibifire_fbx_importer.gdnlib  com_chibifire_fbx_importer.gdns  plugin.cfg
sample/addons/com_chibifire_fbx_importer/license/: stb.LICENSE
sample/addons/com_chibifire_fbx_importer/src/: ComChibifireFbxImporter.cpp  ComChibifireFbxImporter.h  Godot.cpp
src/: ResourceImporterFBX.cpp  ResourceImporterFBX.h
